# contripy

./: .gitignore  Containerfile  LICENSE  Makefile  README.md  contripy  contripy.cfg  example.yaml  pyproject.toml  report  requirements.txt
.github/workflows/: container-image.yml
images/: create_logo.py
lib/: models.py
lib/parsers/: GitContributionParser.py  __init__.py
src/contripy/: __init__.py
src/contripy/lib/parsers/: ContributionParser.py  GitHubContributionParser.py
